# dlsite-manager

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  cliff.toml  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml  svelte.config.js  tailwind.config.cjs  vite.config.js
.github/workflows/: Build Windows Version.yml  release.yml
app/: .metadata  pubspec.yaml
app/lib/: main.dart  product_card.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
crates/dm-api/: .env.example  Cargo.toml
crates/dm-api/examples/: probe_download.rs  probe_works.rs
crates/dm-api/src/: client.rs  error.rs  lib.rs  model.rs  raw.rs
crates/dm-api/tests/: live.rs
crates/dm-archive/: .env.example  Cargo.toml
crates/dm-archive/src/: lib.rs
crates/dm-archive/tests/: live_legacy_split_rar.rs
crates/dm-audit/: Cargo.toml
crates/dm-audit/src/: lib.rs
crates/dm-credentials/: .env.example  Cargo.toml
crates/dm-credentials/src/: lib.rs
crates/dm-credentials/tests/: keyring.rs
crates/dm-download/: .env.example  Cargo.toml
crates/dm-download/examples/: download_work.rs
crates/dm-download/src/: lib.rs
crates/dm-download/tests/: live.rs
crates/dm-jobs/: Cargo.toml
crates/dm-jobs/src/: lib.rs
crates/dm-library/: Cargo.toml
crates/dm-library/src/: lib.rs
crates/dm-storage/: Cargo.toml
crates/dm-storage/migrations/: 20260507170000_storage_bootstrap.sql  20260507173000_app_settings.sql  20260509000000_library_cache.sql  20260511000000_work_downloads.sql  20260512000000_work_custom_tags.sql
crates/dm-storage/src/: lib.rs
docs/: work-log.md
docs/designs/: 2026-05-07.00-dlsite-api-v3-surface.md  2026-05-07.01-download-and-archive-boundary.md  2026-05-07.02-storage-boundary.md  2026-05-09.00-unified-product-list-and-accounts.md  2026-05-10.00-background-job-system.md  2026-05-10.01-library-product-card.md  2026-05-11.00-audit-log-system.md  2026-05-12.01-manual-auto-update.md
docs/todos/: 2026-05-07.00.set-up-rewrite-milestones.md  2026-05-10.00.add-generic-background-job-system.md  2026-05-11.00.reach-v3-release-readiness.md  2026-05-11.01.refactor-frontend-into-reusable-components.md  2026-05-12.00.automate-release-artifacts-with-github-actions.md
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: application.json  default.json
src-tauri/src/: application.rs  application_error.rs  lib.rs  main.rs
src-tauri/src/command/: account_management.rs  error.rs  latest_product_query.rs  mod.rs  product.rs  setting.rs  window.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/models/: latest.rs  mod.rs  v1.rs  v2.rs
src-tauri/src/database/tables/: mod.rs
src-tauri/src/database/tables/v1/: account.rs  display_language_setting.rs  latest_product_query.rs  mod.rs  product.rs  setting.rs
src-tauri/src/database/tables/v2/: account_table.rs  mod.rs  product_download_table.rs  product_table.rs  setting_table.rs
src-tauri/src/dlsite/: api.rs  dto.rs  mod.rs  test.rs
src-tauri/src/dlsite/v2/: api.rs  dto.rs  mod.rs
src-tauri/src/menu/: fetch_new_products.rs  mod.rs  refresh_product_download.rs  refresh_product_list.rs  refresh_products_all.rs  scan_downloaded_products.rs  update_product_list.rs
src-tauri/src/services/: dlsite_service.rs  download_service.rs  mod.rs
src-tauri/src/storage/: account.rs  display_language_setting.rs  latest_product_query.rs  mod.rs  product.rs  setting.rs
src-tauri/src/window/: account_add_window.rs  account_edit_window.rs  account_management_window.rs  main_window.rs  mod.rs  setting_window.rs
src/lib/buttons/: PrimaryButton.svelte  SecondaryButton.svelte  SmallButton.svelte  SmallButtonLink.svelte  SmallFixedBrightRedButton.svelte  SmallFixedBrightRedWithMenuButton.svelte  SmallFixedRedButton.svelte  SmallFixedRedWithMenuButton.svelte  SmallMenuButton.svelte  SmallRedButton.svelte
src/lib/components/: ConfirmationDialog.svelte  ToastStack.svelte
src/lib/components/ui/: Button.svelte  Field.svelte  TextInput.svelte
src/lib/inputs/: Input.svelte  LabeledInput.svelte
src/lib/lists/: DragDropList.svelte
src/lib/model/: constants.ts  types.ts
src/lib/selects/: LabeledSelect.svelte
src/lib/utils/: accounts.ts  format.ts  jobs.ts  products.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/account-add/: +page.svelte
src/routes/account-edit/: +page.svelte
src/routes/account-edit/[id]/: +page.svelte  +page.ts
src/routes/account-management/: +page.svelte  +page.ts
src/routes/main/: +page.svelte  +page.ts  product-values.ts
src/routes/setting/: +page.svelte  +page.ts
src/types/: account.ts  download-event.ts  latest-product-query.ts  product.ts  refresh-event.ts  setting.ts
