[package]
name = "dlsite-manager"
version = "2.1.0"
description = "DLsite Manager"
authors = ["AcrylicShrimp"]
license = "MIT"
repository = "https://github.com/AcrylicShrimp/dlsite-manager"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
anyhow = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
cookie_store = "0.21"
flexi_logger = "0.28"
futures = { version = "0.3" }
lazy_static = { version = "1" }
log = "0.4"
parking_lot = { version = "0.12" }
reqwest = { version = "0.12", features = ["cookies", "json"] }
reqwest_cookie_store = { version = "0.8" }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "array"] }
serde_json = { version = "1.0" }
serde_rusqlite = { version = "0.35" }
serde = { version = "1.0", features = ["derive"] }
scraper = { version = "0.19" }
tauri = { version = "2.2.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-opener = "2.2.5"
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
url = "2"
unrar = { version = "0.5" }
zip-extract = { git = "https://github.com/AcrylicShrimp/zip-extract", tag="v1.3.0" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
