[package]
name = "dlsite-manager"
version = "3.0.0-rc.1"
description = "Desktop manager for DLsite works and libraries."
authors = ["AcrylicShrimp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dlsite_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dm-api = { path = "../crates/dm-api" }
dm-audit = { path = "../crates/dm-audit" }
dm-credentials = { path = "../crates/dm-credentials" }
dm-download = { path = "../crates/dm-download" }
dm-jobs = { path = "../crates/dm-jobs" }
dm-library = { path = "../crates/dm-library" }
dm-storage = { path = "../crates/dm-storage" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tauri-plugin-dialog = "2"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "fmt", "json"] }
