[package]
name = "dm-api"
version = "3.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
cookie_store = { version = "0.22.1", features = ["serde_json"] }
futures-core = "0.3.32"
reqwest = { version = "0.13.3", features = ["cookies", "form", "json", "query", "stream"] }
reqwest_cookie_store = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["sync"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
