[package]
name = "dm-audit"
version = "3.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
chrono = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
