[package]
name = "dm-credentials"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
keyring-core = "1.0.0"
thiserror = "2.0.18"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0.0"

[dev-dependencies]
dotenvy = "0.15.7"
