[package]
name = "dm-jobs"
version = "3.0.0-rc.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
chrono = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
