[package]
name = "dm-library"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
dm-api = { path = "../dm-api" }
dm-credentials = { path = "../dm-credentials" }
dm-storage = { path = "../dm-storage" }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
