[package]
name = "dm-library"
version = "3.2.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
dm-api = { path = "../dm-api" }
dm-credentials = { path = "../dm-credentials" }
dm-download = { path = "../dm-download" }
dm-jobs = { path = "../dm-jobs" }
dm-storage = { path = "../dm-storage" }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1", features = ["fs", "rt", "time"] }
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
