[package]
name = "dm-storage"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
    "tls-none",
] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
